# baran-os

./: .gitignore  .golangci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: demo-smoke.yml
a2a/: card_generator.go  config.go  external_agent.go  go.mod  go.sum  handler_discovery.go  handler_jsonrpc.go  integration_test.go  server.go  skill_mapper.go  task_manager.go  types.go
cmd/baran-a2a/: go.mod  go.sum  main.go
core/: go.mod  go.sum  integration_test.go
core/discovery/: announcer.go  announcer_test.go  handler.go  handler_test.go
core/eventbus/: eventbus.go
core/federation/: alias_sync.go  capability_sync.go  capability_sync_test.go  gateway.go  gateway_test.go  node_monitor.go  node_monitor_test.go  node_registry.go  relay.go  relay_test.go  transport.go
core/health/: monitor.go  monitor_test.go
core/registry/: alias.go  alias_test.go  errors.go  handler.go  kv.go  (+5 more)
docs/: index.html
protocol/: go.mod
sdk/: agent.go  go.mod  health.go  idempotency.go  integration_test.go  lifecycle.go  options.go  step.go  validate.go
sdks/python/: pyproject.toml
sdks/python/src/baran/: __init__.py  agent.py  client.py  events.py  exceptions.py  types.py
sdks/python/tests/: test_agent.py
sidecar/: agent_manager.go  auth.go  config.go  errors.go  go.mod  go.sum  handler_ack.go  handler_deregister.go  handler_health.go  handler_publish.go  handler_register.go  handler_subscribe.go  handler_websocket.go  integration_test.go  registry.go  server.go  translate.go  types.go
ui/: package-lock.json  package.json
(+184 files in other folders)
