[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baran-sdk"
version = "0.1.0"
description = "Python SDK for building Baran OS agents via the Sidecar Gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/baran"]
